--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,12 @@
-Flask==0.10.1
-Flask-MongoKit==0.6
-Jinja2==2.7.3
-MarkupSafe==0.23
-Werkzeug==0.9.6
 beautifulsoup4==4.3.2
 bson==0.3.3
-itsdangerous==0.24
 mongokit==0.9.1.1
 pymongo==2.7.2
 pytz==2014.10
 requests==2.5.0
-wsgiref==0.1.2
 pytest==2.6.4
+pytest-cov==1.8.1
+arrow==0.4.4
+python-dateutil==2.3
+coverage==3.7.1
+sortedcontainers==0.9.4
