--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+Fabric==1.10.1
 Flask==0.10.1
 Flask-MongoKit==0.6
 Flask-RESTful==0.3.1
@@ -11,12 +12,16 @@ aniso8601==0.92
 arrow==0.4.4
 beautifulsoup4==4.3.2
 bson==0.3.3
+ecdsa==0.11
 flask-mongoengine==0.7.1
+gunicorn==19.1.1
 itsdangerous==0.24
 mongoengine==0.8.7
 mongokit==0.9.1.1
-numpy==1.9.1
+# numpy==1.9.1
+paramiko==1.15.2
 py==1.4.26
+pycrypto==2.6.1
 pymongo==2.7.2
 pytest==2.6.4
 python-dateutil==2.4.0
